EIN-416 Layout Issues
* Added success toast for departments save action
* Modified Add/Edit labels
* Fixed invalid date showing

--- a/src/app/admin/organization-management/organization-management-content/locations/locations.component.scss
+++ b/src/app/admin/organization-management/organization-management-content/locations/locations.component.scss
@@ -10,6 +10,12 @@
     display: flex;
     align-items: center;
 
+    ejs-dropdownlist.e-control {
+      span.e-input-group {
+        height: 40px !important;
+      }
+    }
+
     .region-dropdown {
       padding-right: 12px;
     }
@@ -90,6 +96,12 @@
     input {
       height: 40px;
     }
+
+    ejs-dropdownlist.e-control {
+      span.e-input-group {
+        height: 40px !important;
+      }
+    }
   }
 
   .group {
@@ -127,11 +139,5 @@
     .input-container:last-child {
       width: 187px;
     }
-  }
-}
-
-ejs-dropdownlist.e-control {
-  span.e-input-group {
-    height: 40px !important;
   }
 }
